<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">TestApp</string>
    
    <string name="title_decode">ScanEngine - Decode</string>
    <string name="title_blacklevel">ScanEngine - BlackLevel</string>
    <string name="title_wifi">Wifi Test</string>
    <string name="title_rtc">RTC Battery</string>
    <string name="title_light">Light Sensor</string>
    <string name="title_accelerometer">Accelerometer</string>
    <string name="title_led">LED</string>
    <string name="title_dmsg">Dmesg Troubleshooter</string>
    
    <string name="data"></string>
    
    <string name="START">START</string>
    <string name="sResult"/>
    
    <string name="skip">Skip</string>
    <string name="retry">Retry</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="initializing">Initializing...</string>
    <string name="scanning">Scanning...</string>
    <string name="processing">Processing...</string>
    
    <string name="top_scan_key">Top Scan Key</string>
    <string name="bottom_scan_key">Bottom Scan Key</string>
    
    <string name="description_preparing_snapshot">Preparing Snapshot ,&#8230;</string>
    <string name="description_no_snapshot">No Snapshot</string>
    <string name="description_snapshot">Snapshot</string>
    
    <string name="hint_scan">Press <xliff:g id="key" example="bottom_scan_key">%1$s</xliff:g> to scan.</string>
    <string name="hint_accelerometer">Change the orientation of the scanner.\n The test should pass automatically, otherwise press fail button to continue.</string>
    <string name="hint_led">Press Pass button if LED is flashing, otherwise, press fail button.</string>
    <string name="hint_light">Place the scanner in different light environment.</string>
    <string name="hint_light_light">Place the scanner in bright environment.</string>
    <string name="hint_light_dark">Place the scanner in dark environment.</string>

    <string name="hint_snapshot_restart">Restarting scanner, it may take 5 seconds</string>
    <string name="hint_snapshot_advanced">If no black picture shown below after 3 seconds, press scan button 5 times fast and wait.</string>
    <string name="hint_black_level">Use your hand to block scan engine and scan black.</string>
    <!-- RTC test -->
    <string name="action_settings">Delete Files</string>
    <string name="CurrentTime">Current Date/Time: </string>
    <string name="message">Press and hold power button, then select "Power off". Once scanner has powered off, remove batteries, wait at least 10 seconds, then place batteries back into scanner and reboot scanner. </string>
    <string name="passOrFail">Pass Or Fail: </string>
    <string name="Button1">RESTART </string>
    <string name="oops">OOPS!!! Something screwy just happened. Should\'ve hired a real programmer. Press the restart button at the bottom of the screen. Then press and hold power button and power off scanner. </string>
	<string name="oops2">OOPS!!! This is OOPS#2!!!! </string>
</resources>
