<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/display_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/preview_imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:contentDescription="@string/description_snapshot" />

    <TableRow
        style="android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/skip_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="0.5"
            android:text="@string/skip" />

        <Button
            android:id="@+id/retry_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="0.5"
            android:text="@string/retry" />
    </TableRow>
    
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         style="android:attr/buttonBarStyle"
        >
        <Button
            android:id="@+id/pass_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="0.5"
            android:text="@string/pass" />

        <Button
            android:id="@+id/fail_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="0.5"
            android:text="@string/fail" />
    </TableRow>

</LinearLayout>